# CppNow2017

./: .gitignore  LICENSE.txt  README.md
code/: CMakeLists.txt  do_cmake_stuff.sh  make_for_clang.sh  make_for_gcc.sh  poc_run_for_clang.sh  poc_run_for_gcc.sh  run_for_clang.sh  run_for_gcc.sh
code/include/: based_1d_addressing.h  based_1d_storage.h  based_2d_addressing.h  based_2d_storage.h  based_2dxl_addressing.h  based_2dxl_storage.h  leaky_allocation_strategy.h  offset_addressing.h  offset_storage.h  poc_allocator.h  rhx_allocator.h  storage_base.h  synthetic_pointer.h  wrapper_addressing.h  wrapper_storage.h
code/results/: timings.xlsx
code/results/core-i7/: clang381-timings-report.txt  clang391-timings-report.txt  clang400-timings-report.txt  gcc540-timings-report.txt  gcc630-timings-report.txt  gcc710-timings-report.txt
code/results/xeon-3690/: clang381-poc-report.txt  clang381-timings-report.txt  clang391-poc-report.txt  clang391-timings-report.txt  clang400-poc-report.txt  clang400-timings-report.txt  gcc540-poc-report.txt  gcc540-timings-report.txt  gcc630-poc-report.txt  gcc630-timings-report.txt  gcc710-poc-report.txt  gcc710-timings-report.txt  vs2015-poc-report.txt  vs2015-timings-report.txt  vs2017-poc-report.txt  vs2017-timings-report.txt
code/src/: based_1d_storage.cpp  based_2d_storage.cpp  based_2dxl_storage.cpp  leaky_allocation_strategy.cpp  offset_storage.cpp  storage_base.cpp  wrapper_storage.cpp
code/test/: common.cpp  common.h  container_deque_tests.cpp  container_deque_tests.h  container_fwdlist_tests.cpp  container_fwdlist_tests.h  container_list_tests.cpp  container_list_tests.h  container_map_tests.cpp  container_map_tests.h  container_tests.cpp  container_tests.h  container_unordered_map_tests.cpp  container_unordered_map_tests.h  container_vector_tests.cpp  container_vector_tests.h  main.cpp  pointer_cast_tests.h  pointer_copy_tests.h  pointer_sort_tests.h  pointer_stable_sort_tests.h  pointer_tests.cpp  pointer_tests.h  stopwatch.h
code/vs2015/: AllocatorAwareTests.vcxproj  AllocatorAwareTests.vcxproj.filters
code/vs2017/: AllocatorAwareTests.sln  AllocatorAwareTests.vcxproj
